<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.makeitdouble.coffeeland.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/coffee2"
        android:id="@+id/imageView" />

    <TextView
        android:text="@string/title_info"
        android:background="@color/colorTitleBackground"
        android:layout_below="@id/imageView"
        android:id="@+id/textViewTitle"
        style="@style/TextViewTitleStyle"/>

    <ImageView
        android:layout_below="@id/textViewTitle"
        android:src="@drawable/ic_location2"
        android:id="@+id/imageViewLocation"
        android:layout_marginTop="8dp"
        style="@style/ImageViewItemStyle"/>

    <TextView
        android:text="@string/location_info"
        android:layout_toRightOf="@id/imageViewLocation"
        android:layout_alignBottom = "@id/imageViewLocation"
        android:layout_below="@id/textViewTitle"
        android:layout_marginTop="8dp"
        android:id="@+id/textViewLocation"
        style="@style/TextViewItemStyle"/>

    <ImageView
        android:layout_below="@id/textViewLocation"
        android:src="@drawable/ic_web2"
        android:id="@+id/imageViewWebsite"
        style="@style/ImageViewItemStyle"/>

    <TextView
        android:text="@string/website_info"
        android:layout_below="@id/textViewLocation"
        android:layout_toRightOf="@id/imageViewWebsite"
        android:layout_alignBottom = "@id/imageViewWebsite"
        android:id="@+id/textViewWebsite"
        style="@style/TextViewItemStyle"/>

    <ImageView
        android:layout_below="@id/textViewWebsite"
        android:src="@drawable/ic_phone2"
        android:id="@+id/imageViewPhone"
        style="@style/ImageViewItemStyle" />

    <TextView
        android:text="@string/phone_info"
        android:layout_toRightOf="@id/imageViewPhone"
        android:layout_below="@id/textViewWebsite"
        android:layout_alignBottom = "@id/imageViewPhone"
        android:id="@+id/textViewPhone"
        style="@style/TextViewItemStyle"/>

    <ImageView
        android:layout_below="@id/imageViewPhone"
        android:src="@drawable/ic_time2"
        android:id="@+id/imageViewTime"
        style="@style/ImageViewItemStyle" />

    <TextView
        android:text="@string/time_info"
        android:layout_toRightOf="@id/imageViewTime"
        android:layout_below="@id/textViewPhone"
        android:layout_alignBottom = "@id/imageViewTime"
        android:id="@+id/textViewTime"
        style="@style/TextViewItemStyle"/>

    <ImageView
        android:layout_below="@id/imageViewTime"
        android:src="@drawable/ic_mail2"
        android:id="@+id/imageViewMail"
        style="@style/ImageViewItemStyle" />

    <TextView
        android:text="@string/mail_info"
        android:layout_toRightOf="@id/imageViewMail"
        android:layout_below="@id/textViewTime"
        android:layout_alignBottom = "@id/imageViewMail"
        android:id="@+id/textViewMail"
        style="@style/TextViewItemStyle"/>

    <TextView
        android:text="@string/title_details"
        android:background="@color/colorTitleBackground"
        android:layout_below="@id/imageViewMail"
        android:id="@+id/textViewTitle2"
        android:layout_marginTop="16dp"
        style="@style/TextViewTitleStyle"/>

    <TextView
        android:text="@string/text_details"
        android:layout_below="@id/textViewTitle2"
        android:id="@+id/textViewBody2"
        style="@style/TextViewBodyStyle"/>
</RelativeLayout>